// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`templates createAPIResourceTemplate should create API resource template correctly 1`] = `
[
  {
    "apiProtocol": "odata-v4",
    "description": "Description for MyService",
    "entityTypeMappings": [
      {
        "entityTypeTargets": undefined,
      },
    ],
    "entryPoints": [
      "/odata/v4/my",
    ],
    "extensible": {
      "supported": "no",
    },
    "lastUpdate": "2022-12-19T15:47:04+00:00",
    "ordId": "customer.testNamespace:apiResource:MyService:v1",
    "partOfGroups": [
      "sap.cds:service:customer.testNamespace:MyService",
    ],
    "partOfPackage": "sap.test.cdsrc.sample:package:test-api:v1",
    "releaseStatus": "active",
    "resourceDefinitions": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/json",
        "type": "openapi-v3",
        "url": "/.well-known/open-resource-discovery/v1/api-metadata/MyService.oas3.json",
      },
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/xml",
        "type": "edmx",
        "url": "/.well-known/open-resource-discovery/v1/api-metadata/MyService.edmx",
      },
    ],
    "shortDescription": "Short description for MyService",
    "title": "MyService",
    "version": "1.0.0",
    "visibility": "public",
  },
]
`;

exports[`templates createEventResourceTemplate should create event resource template correctly 1`] = `
[
  {
    "description": "CAP Event resource describing events / messages.",
    "extensible": {
      "supported": "no",
    },
    "lastUpdate": "2022-12-19T15:47:04+00:00",
    "ordId": "customer.testNamespace:eventResource:MyService:v1",
    "partOfGroups": [
      "sap.cds:service:customer.testNamespace:MyService",
    ],
    "partOfPackage": "sap.test.cdsrc.sample:package:test-event:v1",
    "releaseStatus": "active",
    "resourceDefinitions": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/json",
        "type": "asyncapi-v2",
        "url": "/.well-known/open-resource-discovery/v1/api-metadata/MyService.asyncapi2.json",
      },
    ],
    "shortDescription": "MyService event resource",
    "title": "ODM testAppName Events",
    "version": "1.0.0",
    "visibility": "public",
  },
]
`;

exports[`templates createEventResourceTemplate should create event resource template correctly with packageIds including namespace 1`] = `
[
  {
    "description": "CAP Event resource describing events / messages.",
    "extensible": {
      "supported": "no",
    },
    "lastUpdate": "2022-12-19T15:47:04+00:00",
    "ordId": "customer.testNamespace:eventResource:MyService:v1",
    "partOfGroups": [
      "sap.cds:service:customer.testNamespace:MyService",
    ],
    "partOfPackage": "customer.testNamespace:package:test:v1",
    "releaseStatus": "active",
    "resourceDefinitions": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/json",
        "type": "asyncapi-v2",
        "url": "/.well-known/open-resource-discovery/v1/api-metadata/MyService.asyncapi2.json",
      },
    ],
    "shortDescription": "MyService event resource",
    "title": "ODM testAppName Events",
    "version": "1.0.0",
    "visibility": "public",
  },
]
`;

exports[`templates createIntegrationDependencyTemplate should create integration dependency template correctly 1`] = `
{
  "aspects": [
    {
      "eventResources": [
        {
          "ordId": "customer.testNamespace:eventResource:MyService:v1",
          "subset": [],
        },
      ],
      "mandatory": true,
      "title": "Integration Aspect sample title",
    },
  ],
  "description": "Integration Dependency sample description",
  "lastUpdate": "2022-12-19T15:47:04+00:00",
  "mandatory": true,
  "ordId": "customer.testNamespace:integrationDependency:MyService:v1",
  "partOfPackage": "customer.testNamespace:package:test:v1",
  "releaseStatus": "active",
  "title": "Integration Dependency sample title",
  "version": "1.0.0",
  "visibility": "public",
}
`;

exports[`templates ordExtension should add apiResources with ORD Extension "visibility=public" 1`] = `
[
  {
    "apiProtocol": "odata-v4",
    "description": "Description for MyService",
    "entityTypeMappings": [
      {
        "entityTypeTargets": "sap.odm:entityType:test:v1",
      },
    ],
    "entryPoints": [
      "/odata/v4/my",
    ],
    "extensible": {
      "supported": "yes",
    },
    "lastUpdate": "2022-12-19T15:47:04+00:00",
    "ordId": "customer.testNamespace:apiResource:MyService:v1",
    "partOfGroups": [
      "sap.cds:service:customer.testNamespace:MyService",
    ],
    "partOfPackage": "sap.test.cdsrc.sample:package:test-other:v1",
    "releaseStatus": "active",
    "resourceDefinitions": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/json",
        "type": "openapi-v3",
        "url": "/.well-known/open-resource-discovery/v1/api-metadata/MyService.oas3.json",
      },
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/xml",
        "type": "edmx",
        "url": "/.well-known/open-resource-discovery/v1/api-metadata/MyService.edmx",
      },
    ],
    "shortDescription": "short description for test MyService apiResource",
    "title": "This is test MyService apiResource title",
    "version": "2.0.0",
    "visibility": "public",
  },
]
`;

exports[`templates ordExtension should add events with ORD Extension "visibility=public" 1`] = `
[
  {
    "description": "CAP Event resource describing events / messages.",
    "extensible": {
      "supported": "yes",
    },
    "lastUpdate": "2022-12-19T15:47:04+00:00",
    "ordId": "customer.testNamespace:eventResource:MyService:v1",
    "partOfGroups": [
      "sap.cds:service:customer.testNamespace:MyService",
    ],
    "partOfPackage": "sap.test.cdsrc.sample:package:test-event:v1",
    "releaseStatus": "active",
    "resourceDefinitions": [
      {
        "accessStrategies": [
          {
            "type": "open",
          },
        ],
        "mediaType": "application/json",
        "type": "asyncapi-v2",
        "url": "/.well-known/open-resource-discovery/v1/api-metadata/MyService.asyncapi2.json",
      },
    ],
    "shortDescription": "short description for test MyService event",
    "title": "This is test MyService event title",
    "version": "2.0.0",
    "visibility": "public",
  },
]
`;

exports[`templates ordExtension should not add apiResources with ORD Extension "visibility=internal" 1`] = `[]`;

exports[`templates ordExtension should not add apiResources with ORD Extension "visibility=private" 1`] = `[]`;

exports[`templates ordExtension should not add events with ORD Extension "visibility=internal" 1`] = `[]`;

exports[`templates ordExtension should not add events with ORD Extension "visibility=private" 1`] = `[]`;
